--- a/index.html
+++ b/index.html
@@ -369,10 +369,10 @@
             </div>
         </footer>
         <div class="backdrop is-open">
-            <div class="model is-open">
+            <div class="model">
                 <button class="model-btn-close" type="button">
                 <svg class="icon-close" width="8" height="8">
-                    <use href="./images/model.svg#icon-close"></use>
+                    <use href="./images/icons.svg#icon-close"></use>
                 </svg>
                 </button>
                 <p class="model-tittle">
@@ -389,7 +389,7 @@
                         id="user-name"
                     />
                     <svg class="input-icon" width="18" height="24">
-                        <use href="./images/icons.svg#icon-person"></use>
+                        <use href="./images/icons.svg#icon-user-name"></use>
                     </svg>
                     </div>
                 </div>
@@ -403,7 +403,7 @@
                         id="user-phone"
                     />
                     <svg class="input-icon" width="18" height="24">
-                        <use href="./images/icons.svg#icon-phone"></use>
+                        <use href="./images/icons.svg#icon-user-phone"></use>
                     </svg>
                 </div>
                 </div>
@@ -417,7 +417,7 @@
                         id="user-email"
                     />
                     <svg class="input-icon" width="18" height="24">
-                        <use href="./images/icons.svg#icon-email"></use>
+                        <use href="./images/icons.svg#icon-user-email"></use>
                     </svg>
                     </div>
                 </div>
